# schulprojekt

./: .gitignore  ARCHITECTURE.md  README.md  documentation.typ  flake.nix  justfile  presentation.typ  projekt-anforderungen.md
app-home/: .containerignore  .gitignore  Cargo.toml  Dockerfile  README.md
app-home/src/: config.rs  main.rs  routes.rs  styles.css  templates.rs
app-home/systemd/: pocket-surf-home.service
gantt/: gantt.typ  gantt.yaml
meetings/: Meeting_01.md
server-config/: Caddyfile  README.md  dnsmasq.conf  fix-dnsmasq.sh  hostapd.conf  install-podman.sh  install.sh  pocket-surf-home.service
server-config/quadlets/: pocket-surf-bookstack-db.container  pocket-surf-bookstack.container  pocket-surf-caddy.container  pocket-surf-chat.container  pocket-surf-home.container  pocket-surf-sftpgo.container  pocket-surf-vikunja-api.container  pocket-surf-vikunja-frontend.container  pocket-surf-vikunja.container  pocket-surf.pod
