[package]
name = "pocket-surf-home"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
maud = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.11"
log = "0.4"
bcrypt = "0.15"
actix-session = { version = "0.9", features = ["cookie-session"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
